# general-purpose-saas-template

./: .env.example  .gitignore  DESIGN.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-aws.yml
.playwright-mcp/: page-2026-05-20T21-32-41-495Z.yml  page-2026-05-20T21-34-48-621Z.yml  page-2026-05-20T21-36-53-853Z.yml  page-2026-05-20T21-38-36-966Z.yml  page-2026-05-20T21-42-10-059Z.yml
apps/gui/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/gui/e2e/: app-navigation.spec.ts
apps/gui/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/gui/src/api/: client.ts
apps/gui/src/components/: BrandLogo.tsx  Breadcrumbs.tsx  Drawer.tsx  Layout.tsx
apps/gui/src/router/: index.tsx
apps/gui/src/theme/: AppThemeProvider.tsx
apps/landing/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/landing/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/server/: pyproject.toml
apps/server/app/: main.py
apps/server/app/auth/: routes.py  schemas.py  service.py
apps/server/app/core/: config.py  database.py  dependencies.py  security.py
apps/server/app/db/: base.py  models.py  sessions.py
apps/server/app/email/: routes.py  schemas.py  service.py
apps/server/app/users/: models.py  routes.py  schemas.py  service.py
apps/server/migrations/: env.py
apps/server/migrations/versions/: 973ebedce0b7_create_auth_tables.py
apps/server/tests/: conftest.py  test_auth_smtp_security.py  test_security.py
docs/: AGENTS.md  db.puml
scripts/: dev.sh
(+15 files in other folders)
