[project]
name = "general-purpose-saas-api"
version = "0.1.0"
description = "FastAPI service for the general-purpose SaaS template."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.12.0",
  "email-validator>=2.3.0",
  "psycopg[binary]>=3.3.2",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
  "alembic>=1.18.4",
  "uuid6>=2025.0.1",
  "argon2-cffi>=25.1.0",
]

[project.optional-dependencies]
dev = ["black>=26.0.0", "pytest>=9.0.0", "pytest-cov>=7.0.0"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
